--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -1,3 +1,81 @@
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+:root {
+  --primary-color:#4891ff;
+  --gray: #f4f4f6;
+  --black: #111;
+  --white: #fff;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+html body {
+  min-height: 100vh;
+  font-size: 1em;
+  line-height: 1.5;
+  font-family: "Work Sans", sans-serif;
+}
+html body ul, html body li {
+  list-style-type: none;
+}
+html body a {
+  text-decoration: none;
+  color: var(--black);
+}
+html body img {
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.container-sm {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+nav.desktop {
+  background-color: var(--white);
+}
+nav.desktop .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2em 0em;
+}
+nav.desktop ul {
+  display: flex;
+  gap: 2em;
+}
+nav.desktop ul li a {
+  font-size: 1em;
+  font-weight: 600;
+  transition: all 0.2s;
+}
+nav.desktop ul li a:hover {
+  color: var(--primary-color);
+}
+nav.desktop ul li a.log-in {
+  background-color: var(--gray);
+  padding: 1em;
+  border-radius: 8px;
+}
+nav.desktop ul li a.log-in i {
+  margin-right: 0.5em;
+}
+nav.desktop ul li a.log-in:hover {
+  background-color: var(--primary-color);
+  color: var(--black);
+}
 
 /*# sourceMappingURL=main.css.map */
