--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -78,4 +78,18 @@ nav.desktop ul li a.log-in:hover {
   color: var(--black);
 }
 
+section.hero .container {
+  background: url(/assets/img/hero-bg.png) no-repeat;
+  background-size: contain;
+  background-position: center bottom;
+  height: 550px;
+}
+section.hero .container .hero-content h1 {
+  font-size: 3rem;
+  line-height: 1.2;
+  font-weight: 600;
+  width: 70%;
+  margin-bottom: 0.5em;
+}
+
 /*# sourceMappingURL=main.css.map */
