--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -98,3 +98,22 @@ nav.desktop{
 
 }
 
+section.hero{
+
+    .container{
+        background: url(/assets/img/hero-bg.png) no-repeat;
+        background-size: contain;
+        background-position: center bottom;
+        height: 550px;
+
+        .hero-content{
+            h1{
+                font-size: 3rem;
+                line-height: 1.2; //always put line height incase it wraps
+                font-weight: 600;
+                width: 70%;
+                margin-bottom: 0.5em;
+            }
+        }
+    }
+}
