--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -46,6 +46,7 @@ html body img {
 
 nav.desktop {
   background-color: var(--white);
+  margin-bottom: 4em;
 }
 nav.desktop .container {
   display: flex;
@@ -53,29 +54,29 @@ nav.desktop .container {
   align-items: center;
   padding: 2em 0em;
 }
-nav.desktop ul {
+nav.desktop .container ul {
   display: flex;
   gap: 2em;
 }
-nav.desktop ul li a {
+nav.desktop .container ul li a {
   font-size: 1em;
-  font-weight: 600;
+  font-weight: 500;
   transition: all 0.2s;
 }
-nav.desktop ul li a:hover {
+nav.desktop .container ul li a:hover {
   color: var(--primary-color);
 }
-nav.desktop ul li a.log-in {
+nav.desktop .container ul li a.log-in {
   background-color: var(--gray);
   padding: 1em;
   border-radius: 8px;
 }
-nav.desktop ul li a.log-in i {
+nav.desktop .container ul li a.log-in i {
   margin-right: 0.5em;
 }
-nav.desktop ul li a.log-in:hover {
+nav.desktop .container ul li a.log-in:hover {
   background-color: var(--primary-color);
-  color: var(--black);
+  color: var(--white);
 }
 
 section.hero .container {
@@ -84,12 +85,50 @@ section.hero .container {
   background-position: center bottom;
   height: 550px;
 }
+section.hero .container .hero-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
 section.hero .container .hero-content h1 {
   font-size: 3rem;
   line-height: 1.2;
   font-weight: 600;
   width: 70%;
-  margin-bottom: 0.5em;
+}
+section.hero .container .hero-content .button-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 0.5em;
+}
+section.hero .container .hero-content .button-container a {
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 15%;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  transition: all 0.2s;
+}
+section.hero .container .hero-content .button-container a i {
+  margin-right: 0.5em;
+}
+section.hero .container .hero-content .button-container a:nth-child(1) {
+  background-color: var(--primary-color);
+  color: var(--white);
+}
+section.hero .container .hero-content .button-container a:nth-child(1):hover {
+  background-color: var(--black);
+  color: var(--white);
+}
+section.hero .container .hero-content .button-container a:nth-child(2) {
+  background-color: var(--gray);
+}
+section.hero .container .hero-content .button-container a:nth-child(2):hover {
+  background-color: var(--primary-color);
+  color: var(--white);
 }
 
 /*# sourceMappingURL=main.css.map */
