--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -53,6 +53,7 @@ html{
 
 nav.desktop{
     background-color: var(--white);
+    margin-bottom: 4em;
     //padding: 0em em;
 
     .container{
@@ -60,42 +61,39 @@ nav.desktop{
         justify-content: space-between;
         align-items: center;
         padding: 2em 0em;
-    }
 
-    ul{
-        display: flex;
-        gap: 2em;
-
-        li{
-            a{
-                font-size: 1em;
-                font-weight: 600;
-                transition: all 0.2s;
-            }
-
-            a:hover{
-                color: var(--primary-color);
-            }
-
-            a.log-in{
-                background-color: var(--gray);
-                padding: 1em;
-                border-radius: 8px;
-
-                i{
-                    margin-right: 0.5em;
+        ul{
+            display: flex;
+            gap: 2em;
+    
+            li{
+                a{
+                    font-size: 1em;
+                    font-weight: 500;
+                    transition: all 0.2s;
                 }
-            }
-
-            a.log-in:hover{
-                background-color: var(--primary-color);
-                color: var(--black);
-            }
+    
+                a:hover{
+                    color: var(--primary-color);
+                }
+    
+                a.log-in{
+                    background-color: var(--gray);
+                    padding: 1em;
+                    border-radius: 8px;
+    
+                    i{
+                        margin-right: 0.5em;
+                    }
+                }
+    
+                a.log-in:hover{
+                    background-color: var(--primary-color);
+                    color: var(--white);
+                }
+            } 
         }
-
-        
     }
-
 }
 
 section.hero{
@@ -107,12 +105,55 @@ section.hero{
         height: 550px;
 
         .hero-content{
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+
             h1{
                 font-size: 3rem;
                 line-height: 1.2; //always put line height incase it wraps
                 font-weight: 600;
                 width: 70%;
-                margin-bottom: 0.5em;
+            }
+
+            .button-container{
+                display: flex;
+                justify-content: left;
+                align-items: center;
+                gap: 0.5em;
+
+                a{
+                    font-weight: 500;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    min-width: 15%;
+                    padding: 0.8em 1em;
+                    border-radius: 8px;
+                    transition: all 0.2s;
+
+                    i{
+                        margin-right: 0.5em;
+                    }
+                    
+                }
+            }
+
+            .button-container a:nth-child(1){
+                background-color: var(--primary-color);
+                color: var(--white);
+            }
+            .button-container a:nth-child(1):hover{
+                background-color: var(--black);
+                color: var(--white);
+            }
+
+            .button-container a:nth-child(2){
+                background-color: var(--gray);
+            }
+            .button-container a:nth-child(2):hover{
+                background-color: var(--primary-color);
+                color: var(--white);
             }
         }
     }
