--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -79,6 +79,9 @@ nav.desktop .container ul li a.log-in:hover {
   color: var(--white);
 }
 
+section.hero {
+  margin-bottom: 4em;
+}
 section.hero .container {
   background: url(/assets/img/hero-bg.png) no-repeat;
   background-size: contain;
@@ -129,6 +132,30 @@ section.hero .container .hero-content .button-container a:nth-child(2) {
 section.hero .container .hero-content .button-container a:nth-child(2):hover {
   background-color: var(--primary-color);
   color: var(--white);
+}
+
+section.video {
+  background-color: var(--black);
+}
+section.video .container-sm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+  color: var(--white);
+}
+section.video .container-sm h2 {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: 500;
+  text-align: center;
+}
+section.video .container-sm a {
+  background-color: var(--primary-color);
+  color: var(--white);
+  padding: 0.8em 1em;
+  border-radius: 8px;
 }
 
 /*# sourceMappingURL=main.css.map */
