--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -97,6 +97,7 @@ nav.desktop{
 }
 
 section.hero{
+    margin-bottom: 4em;
 
     .container{
         background: url(/assets/img/hero-bg.png) no-repeat;
@@ -155,6 +156,33 @@ section.hero{
                 background-color: var(--primary-color);
                 color: var(--white);
             }
+        }
+    }
+}
+
+section.video{
+    background-color: var(--black);
+
+    .container-sm{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+        color: var(--white);
+
+        h2{
+            font-size: 2.2rem;
+            line-height: 1.4;
+            font-weight:500;
+            text-align: center;
+        }
+
+        a{
+            background-color: var(--primary-color);
+            color: var(--white);
+            padding: 0.8em 1em;
+            border-radius: 8px;
         }
     }
 }
