--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -135,7 +135,20 @@ section.hero .container .hero-content .button-container a:nth-child(2):hover {
 }
 
 section.video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 6em;
   background-color: var(--black);
+  color: var(--white);
+  padding: 4em 0em;
+}
+section.video h2 {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: 500;
+  text-align: center;
 }
 section.video .container-sm {
   display: flex;
@@ -143,19 +156,40 @@ section.video .container-sm {
   align-items: center;
   justify-content: center;
   gap: 2em;
-  color: var(--white);
-}
-section.video .container-sm h2 {
-  font-size: 2.2rem;
-  line-height: 1.4;
-  font-weight: 500;
-  text-align: center;
 }
 section.video .container-sm a {
   background-color: var(--primary-color);
   color: var(--white);
   padding: 0.8em 1em;
   border-radius: 8px;
+}
+section.video .container-sm a:hover {
+  text-decoration: underline;
+}
+section.video .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+section.video .container h2 {
+  text-align: left;
+}
+section.video .container .testimonials-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+section.video .container .testimonials-grid .card {
+  background: #fff;
+  color: #000;
+  border-radius: 10px;
+  padding: 20px;
+}
+section.video .container .testimonials-grid .card p:nth-child(2) {
+  margin-top: 30px;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
