--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -161,7 +161,21 @@ section.hero{
 }
 
 section.video{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6em;
     background-color: var(--black);
+    color: var(--white);
+    padding: 4em 0em;
+
+    h2{
+        font-size: 2.2rem;
+        line-height: 1.4;
+        font-weight:500;
+        text-align: center;
+    }
 
     .container-sm{
         display: flex;
@@ -169,14 +183,6 @@ section.video{
         align-items: center;
         justify-content: center;
         gap: 2em;
-        color: var(--white);
-
-        h2{
-            font-size: 2.2rem;
-            line-height: 1.4;
-            font-weight:500;
-            text-align: center;
-        }
 
         a{
             background-color: var(--primary-color);
@@ -184,5 +190,42 @@ section.video{
             padding: 0.8em 1em;
             border-radius: 8px;
         }
+
+        a:hover{
+            text-decoration: underline;
+        }
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+
+        h2{
+            text-align: left;
+        }
+
+
+        .testimonials-grid{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
+
+            .card{
+                background: #fff;
+                color: #000;
+                border-radius: 10px;
+                padding:20px ;
+            }
+
+            .card p:nth-child(2){
+                margin-top: 30px;
+                font-weight: bold;
+            }
+            
+        }
+        
     }
 }
