--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -142,7 +142,7 @@ section.video {
   gap: 6em;
   background-color: var(--black);
   color: var(--white);
-  padding: 4em 0em;
+  padding: 2em 0em;
 }
 section.video h2 {
   font-size: 2.2rem;
@@ -190,6 +190,57 @@ section.video .container .testimonials-grid .card {
 section.video .container .testimonials-grid .card p:nth-child(2) {
   margin-top: 30px;
   font-weight: bold;
+}
+
+section.pricing {
+  background-color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+}
+section.pricing h2 {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
+section.pricing span {
+  color: var(--primary-color);
+}
+section.pricing .container-sm {
+  background-color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+section.pricing .container-sm .pricing-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2em;
+}
+section.pricing .container-sm .pricing-grid .card {
+  border-radius: 8px;
+}
+section.pricing .container-sm .pricing-grid .card span {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
+section.pricing .container-sm .pricing-grid .card:nth-child(1) {
+  background-color: var(--gray);
+}
+section.pricing .container-sm .pricing-grid .card:nth-child(1) span {
+  color: var(--black);
+}
+section.pricing .container-sm .pricing-grid .card:nth-child(2) {
+  background-color: var(--black);
+  color: var(--white);
+}
+section.pricing .container-sm .pricing-grid .card:nth-child(2) span {
+  color: var(--white);
 }
 
 /*# sourceMappingURL=main.css.map */
