--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -62,6 +62,11 @@ nav.desktop{
         align-items: center;
         padding: 2em 0em;
 
+        img{
+            width: 100%;
+            
+        }
+
         ul{
             display: flex;
             gap: 2em;
@@ -189,10 +194,12 @@ section.video{
             color: var(--white);
             padding: 0.8em 1em;
             border-radius: 8px;
+            transition: all 0.2s;
         }
 
         a:hover{
-            text-decoration: underline;
+            background-color: var(--white);
+            color: var(--black);
         }
     }
 
@@ -237,6 +244,7 @@ section.pricing{
     align-items: center;
     justify-content: center;
     gap: 1em;
+    padding: 2em 0em;
 
     
     h2{
@@ -263,6 +271,11 @@ section.pricing{
             gap: 2em;
     
             .card{
+                display: flex;
+                flex-direction: column;
+                gap: 1em;
+                padding: 1.1em;
+                padding-top: 4em;
                 border-radius: 8px;
                 
                 span{
@@ -270,6 +283,40 @@ section.pricing{
                     line-height: 1.4;
                     font-weight:500;
                 }
+
+                a{
+                    background-color: var(--primary-color);
+                    color: var(--white);
+                    width: 100%;
+                    font-weight: 500;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0.8em 1em;
+                    border-radius: 8px;
+                    transition: all 0.2s;
+                    margin-top: 1em;
+                }
+
+                a:hover{
+                    background-color: var(--black);
+                }
+
+                a.premium:hover{
+                    background-color: var(--white);
+                    color: var(--black);
+                }
+
+                ul{         
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1em;
+
+                    i{
+                        margin-right: 0.5em;
+                    }
+                }
+
             }
         }
 
