--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -31,6 +31,11 @@ html body a {
 html body img {
   max-width: 100%;
 }
+html body h2 {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: 500;
+}
 
 .container {
   max-width: 1100px;
@@ -147,18 +152,15 @@ section.video {
   color: var(--white);
   padding: 2em 0em;
 }
-section.video h2 {
-  font-size: 2.2rem;
-  line-height: 1.4;
-  font-weight: 500;
-  text-align: center;
-}
 section.video .container-sm {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2em;
+}
+section.video .container-sm h2 {
+  text-align: center;
 }
 section.video .container-sm a {
   background-color: var(--primary-color);
@@ -205,11 +207,6 @@ section.pricing {
   justify-content: center;
   gap: 1em;
   padding: 2em 0em;
-}
-section.pricing h2 {
-  font-size: 2.2rem;
-  line-height: 1.4;
-  font-weight: 500;
 }
 section.pricing span {
   color: var(--primary-color);
