--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 
 *{
     margin: 0;
@@ -8,6 +9,7 @@
 
 :root{
     --primary-color:#4891ff;
+    --dark-gray: #ddd;
     --gray: #f4f4f6;
     --black: #111;
     --white: #fff;
@@ -38,7 +40,7 @@ html{
         h2{
             font-size: 2.2rem;
             line-height: 1.4;
-            font-weight:500;
+            font-weight:400;
         }
     }
 }
@@ -124,7 +126,7 @@ section.hero{
             h1{
                 font-size: 3rem;
                 line-height: 1.2; //always put line height incase it wraps
-                font-weight: 600;
+                font-weight: 500;
                 width: 70%;
             }
 
@@ -277,7 +279,7 @@ section.pricing{
                 span{
                     font-size: 2.2rem;
                     line-height: 1.4;
-                    font-weight:500;
+                    font-weight:400;
                 }
 
                 a{
@@ -329,6 +331,41 @@ section.pricing{
 
             span{
                 color: var(--white);
+            }
+        }
+    }
+
+}
+
+section.faq{
+    background-color: var(--gray);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    padding: 2em 0em;
+
+    .container-sm{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1em;
+        padding: 2em 0em;
+    }
+
+    ul{
+        border: 1px solid red;
+        display: flex;
+        min-width: 80%;
+        justify-content: space-between;
+        
+        li{
+            border: 1px solid green;
+
+            a{
+                border: 1px solid yellow;
             }
         }
     }
