--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -234,7 +234,7 @@ section.video{
 
             .card p:nth-child(2){
                 margin-top: 30px;
-                font-weight: bold;
+                font-weight: 600;
             }
             
         }
@@ -356,18 +356,30 @@ section.faq{
     }
 
     ul{
-        border: 1px solid red;
+        background-color: var(--dark-gray);
         display: flex;
         min-width: 80%;
         justify-content: space-between;
+        align-items: center;
+        padding: 0.8em 1em;
+        border-radius: 8px;
         
         li{
-            border: 1px solid green;
+            padding: 0.8em 0em;
 
             a{
-                border: 1px solid yellow;
+                padding: 0.8em 1em;
+                border-radius: 8px;
+                font-weight: 500;
+            }
+
+            a.active{
+                background-color: var(--primary-color);
+                color: var(--white);
             }
         }
+
+        
     }
 
 }
