--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -353,33 +353,73 @@ section.faq{
         justify-content: center;
         gap: 1em;
         padding: 2em 0em;
-    }
 
-    ul{
-        background-color: var(--dark-gray);
-        display: flex;
-        min-width: 80%;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0.8em 1em;
-        border-radius: 8px;
-        
-        li{
-            padding: 0.8em 0em;
+        ul{
+            background-color: var(--dark-gray);
+            display: flex;
+            min-width: 50%;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.8em 1em;
+            border-radius: 8px;
+            
+            li{
+                padding: 0.8em 0em;
 
-            a{
-                padding: 0.8em 1em;
-                border-radius: 8px;
-                font-weight: 500;
-            }
+                a{
+                    padding: 0.8em 1em;
+                    border-radius: 8px;
+                    font-weight: 500;
+                }
 
-            a.active{
-                background-color: var(--primary-color);
-                color: var(--white);
-            }
+                a.active{
+                    background-color: var(--primary-color);
+                    color: var(--white);
+                }
+            }     
+
         }
 
-        
-    }
+        .faq-group{
+            border-bottom: 1px solid #ccc;
+            margin-top: 4em;
+            transform: all 0.3s ease;
 
+            .faq-group-header{
+                padding: 20px 0;
+                margin-bottom: 15px;
+                position: relative;
+
+                h4{
+                    font-size: 1.2em;
+                    font-weight: 500;
+                    width: 95%;
+                }
+                     
+                i{
+                    position: absolute;
+                    right: 0;
+                    top: 35px;
+                    font-size: 1.3rem;
+                    cursor: pointer;
+                }
+            }
+
+            .faq-group-body{
+                display: none;
+                transition: all 0.3s ease-in-out;
+                
+            }
+
+            .faq-group-body.open{
+                display: block;
+            }
+
+/*             .faq-group-body.open .faq-group-header i {
+                transform: rotate(180deg);
+              } */
+            
+
+        }
+    }
 }
