--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -143,6 +143,9 @@
 
 
 @media (max-width: 1024px){
+    .mobile-header{
+        display: block;
+    }
     /* STICKY HEADER */
     .mobile-header {
       position: sticky;
