--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -56,6 +56,10 @@ html body input::placeholder {
   padding: 0 15px;
 }
 
+.mobile-header {
+  display: none;
+}
+
 nav.desktop {
   background-color: var(--white);
   margin-bottom: 4em;
