--- a/assets/scss/css/responsive.css
+++ b/assets/scss/css/responsive.css
@@ -96,6 +96,9 @@
   }
 }
 @media (max-width: 1024px) {
+  .mobile-header {
+    display: block;
+  }
   /* STICKY HEADER */
   .mobile-header {
     position: sticky;
