--- a/assets/scss/css/responsive.css
+++ b/assets/scss/css/responsive.css
@@ -15,6 +15,7 @@
   }
   section.hero .container .hero-content h1 {
     font-size: 2rem;
+    font-weight: 600;
     width: 100%;
   }
   section.hero .container .hero-content .button-container {
@@ -25,6 +26,8 @@
   }
   section.hero .container .hero-content img.mobile {
     display: block;
+    width: 100%;
+    height: 70%;
     margin-top: 3em;
   }
   section.video {
