--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -25,6 +25,7 @@
 
                 h1{
                     font-size: 2rem;
+                    font-weight: 600;
                     width: 100%;
                 }
 
@@ -38,6 +39,8 @@
 
                 img.mobile{
                     display: block;
+                    width: 100%;
+                    height: 70%;
                     margin-top: 3em;
                 }
             }
