--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -104,9 +104,9 @@
             }
 
             h2{
-                width: 80%;
+                width: 70%;
                 text-align: center;
-                font-size: 1.875rem;
+                font-size: 1.1rem;
             }
 
             .faq-group{
@@ -239,6 +239,7 @@
       margin: 0;
       padding: 0em;
       width: 100%;
+      border-bottom: 1px solid var(--dark-gray)
     }
     .mobile-header__toggle:checked ~ .mobile-header__nav .mobile-header__nav-list {
       max-height: 400px;
@@ -262,5 +263,15 @@
       i{
         margin-right: 0.5em;
       }
+    }
+
+    a.log-in{
+        background-color: var(--gray);
+        padding: 1em;
+        border-radius: 8px;
+    }
+    a.log-in:hover{
+        background-color: var(--primary-color);
+        color: var(--white);
     }
 }
