--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -129,6 +129,9 @@
         padding: 2em 0em;
 
         .container{
+            img{
+                width: 28%;
+            }
 
             .contact-content{
                 flex-direction: column;
