--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,19 +1,9 @@
+@use './abstracts/variables' as var;
+@use './base/typography';
+
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root{
-    --primary-color:#4891ff;
-    --dark-gray: #ddd;
-    --gray: #f4f4f6;
-    --black: #111;
-    --white: #fff;
-}
 
 html{
     scroll-behavior: smooth;
@@ -30,7 +20,7 @@ html{
 
         a{
             text-decoration: none;
-            color: var(--black);
+            color: var.$black;
         }
 
         img{
@@ -53,7 +43,6 @@ html{
     }
 }
 
-
 //utilities
 .container{
     max-width: 1100px;
@@ -72,7 +61,7 @@ html{
 }
 
 nav.desktop{
-    background-color: var(--white);
+    background-color: var.$white;
     margin-bottom: 4em;
     //padding: 0em em;
 
@@ -99,11 +88,11 @@ nav.desktop{
                 }
     
                 a:hover{
-                    color: var(--primary-color);
+                    color: var.$primary-color;
                 }
     
                 a.log-in{
-                    background-color: var(--gray);
+                    background-color: var.$gray;
                     padding: 1em;
                     border-radius: 8px;
     
@@ -113,8 +102,8 @@ nav.desktop{
                 }
     
                 a.log-in:hover{
-                    background-color: var(--primary-color);
-                    color: var(--white);
+                    background-color: var.$primary-color;
+                    color: var.$white;
                 }
             } 
         }
@@ -170,20 +159,20 @@ section.hero{
             }
 
             .button-container a:nth-child(1){
-                background-color: var(--primary-color);
-                color: var(--white);
+                background-color: var.$primary-color;
+                color: var.$white;
             }
             .button-container a:nth-child(1):hover{
-                background-color: var(--black);
-                color: var(--white);
+                background-color: var.$black;
+                color: var.$white;
             }
 
             .button-container a:nth-child(2){
-                background-color: var(--gray);
+                background-color: var.$gray;
             }
             .button-container a:nth-child(2):hover{
-                background-color: var(--primary-color);
-                color: var(--white);
+                background-color: var.$primary-color;
+                color: var.$white;
             }
         }
     }
@@ -195,8 +184,8 @@ section.video{
     align-items: center;
     justify-content: center;
     gap: 6em;
-    background-color: var(--black);
-    color: var(--white);
+    background-color: var.$black;
+    color: var.$white;
     padding: 4em 0em;
 
     .container-sm{
@@ -211,16 +200,16 @@ section.video{
         }
 
         a{
-            background-color: var(--primary-color);
-            color: var(--white);
+            background-color: var.$primary-color;
+            color: var.$white;
             padding: 0.8em 1em;
             border-radius: 8px;
             transition: all 0.2s;
         }
 
         a:hover{
-            background-color: var(--white);
-            color: var(--black);
+            background-color: var.$white;
+            color: var.$black;
         }
     }
 
@@ -259,7 +248,7 @@ section.video{
 }
 
 section.pricing{
-    background-color: var(--white);
+    background-color: var.$white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -268,11 +257,11 @@ section.pricing{
     padding: 2em 0em;
 
     span{
-        color: var(--primary-color);
+        color: var.$primary-color;
     }
 
     .container-sm{
-        background-color: var(--white);
+        background-color: var.$white;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -299,8 +288,8 @@ section.pricing{
                 }
 
                 a{
-                    background-color: var(--primary-color);
-                    color: var(--white);
+                    background-color: var.$primary-color;
+                    color: var.$white;
                     width: 100%;
                     font-weight: 500;
                     display: flex;
@@ -313,12 +302,12 @@ section.pricing{
                 }
 
                 a:hover{
-                    background-color: var(--black);
+                    background-color: var.$black;
                 }
 
                 a.premium:hover{
-                    background-color: var(--white);
-                    color: var(--black);
+                    background-color: var.$white;
+                    color: var.$black;
                 }
 
                 ul{         
@@ -335,18 +324,18 @@ section.pricing{
         }
 
         .pricing-grid .card:nth-child(1){
-            background-color: var(--gray);
+            background-color: var.$gray;
 
             span{               
-                color: var(--black);
+                color: var.$black;
             }
         }
         .pricing-grid .card:nth-child(2){
-            background-color: var(--black);
-            color: var(--white);
+            background-color: var.$black;
+            color: var.$white;
 
             span{
-                color: var(--white);
+                color: var.$white;
             }
         }
     }
@@ -354,7 +343,7 @@ section.pricing{
 }
 
 section.faq{
-    background-color: var(--gray);
+    background-color: var.$gray;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -371,7 +360,7 @@ section.faq{
         padding: 2em 0em;
 
         ul{
-            background-color: var(--dark-gray);
+            background-color: var.$dark-gray;
             display: flex;
             min-width: 50%;
             justify-content: space-between;
@@ -389,8 +378,8 @@ section.faq{
                 }
 
                 a.active{
-                    background-color: var(--primary-color);
-                    color: var(--white);
+                    background-color: var.$primary-color;
+                    color: var.$white;
                 }
             }     
 
@@ -442,7 +431,7 @@ section.faq{
 }
 
 footer{
-    background-color: var(--black);
+    background-color: var.$black;
     padding: 4em 0em;
 
     .container{
@@ -456,7 +445,7 @@ footer{
     
     
             form{
-                background-color: var(--white);
+                background-color: var.$white;
                 display: flex;
                 flex-direction: column;
                 gap: 0.5em;
@@ -465,7 +454,7 @@ footer{
                 max-width: 35%;
         
                 h4{
-                    color: var(--black);
+                    color: var.$black;
                     font-weight: 600;
                     font-size: 1.2em;
                 }
@@ -477,12 +466,12 @@ footer{
                     padding: 0.8em 1em;
                     border-radius: 8px;
                     outline: transparent;
-                    border: 1px solid var(--dark-gray);
+                    border: 1px solid var.$dark-gray;
                 }
         
                 button{
-                    background-color: var(--primary-color);
-                    color: var(--white);
+                    background-color: var.$primary-color;
+                    color: var.$white;
                     font-size: 1em;
                     font-weight: 500;
                     display: flex;
@@ -499,15 +488,15 @@ footer{
         
                 button:hover{
                     
-                    background-color: var(--black);
-                    color: var(--white);
+                    background-color: var.$black;
+                    color: var.$white;
                 }
     
     
             }
     
             h4{
-                color: var(--white);
+                color: var.$white;
                 font-size: 1.2em;
                 font-weight: 500;
                 margin-bottom: 0.8em;
@@ -520,12 +509,12 @@ footer{
             }
 
             a{
-                color: var(--dark-gray);
+                color: var.$dark-gray;
                 transition: all 0.2s;
             }
 
             a:hover{
-                color: var(--primary-color);
+                color: var.$primary-color;
             }
         }
 
@@ -534,13 +523,13 @@ footer{
             gap: 1.5em;
 
             i{
-                color: var(--gray);
+                color: var.$gray;
                 font-size: 2em;
                 transition: all 0.2s;
             }
 
             i:hover{
-                    color: var(--primary-color);
+                    color: var.$primary-color;
             }
         }
 
