--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,3 +1,12 @@
-//button padding
-$btn-padding: 0.8em 1em;
-$btn-font-weight: 500;
+@use '/assets/scss/abstracts/variables' as var;
+
+//<a> buttons
+.a-btn{
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: var.$btn-padding;
+    border-radius: 8px;
+    transition: all 0.2s;
+}
