--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -62,7 +62,7 @@ nav.desktop .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2em 0em;
+  padding: 2em 1em;
 }
 nav.desktop .container img {
   width: 100%;
@@ -127,6 +127,7 @@ section.hero .container .hero-content .button-container a {
   justify-content: center;
   align-items: center;
   min-width: 15%;
+  /* padding: 0.8em 1em; */
   padding: 0.8em 1em;
   border-radius: 8px;
   transition: all 0.2s;
